csv added. slight code changes made.

--- a/MED_Pronounce.ipynb
+++ b/MED_Pronounce.ipynb
@@ -2,40 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from nltk.corpus import cmudict"
+    "from nltk.corpus import cmudict, stopwords, words\n",
+    "from nltk import pos_tag\n",
+    "import random\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('abdication', ['AE2', 'B', 'D', 'IH0', 'K', 'EY1', 'SH', 'AH0', 'N'])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cmudict.entries()[100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +27,7 @@
        "[['HH', 'AH0', 'L', 'OW1'], ['HH', 'EH0', 'L', 'OW1']]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,17 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def MED(w1, w2):\n",
+    "    \n",
     "    cost = []\n",
-    "    del_cost = 1\n",
-    "    add_cost = 1\n",
-    "    sub_cost = 2\n",
+    "#     del_cost = 1\n",
+    "#     add_cost = 1\n",
+    "#     sub_cost = 2\n",
     "    \n",
     "    vowels = ['A', 'E', 'I', 'O', 'U']\n",
     "    voiced = ['B', 'D', 'G', 'J', 'L', 'M', 'N', 'R', 'V', 'W', 'Y', 'Z']\n",
@@ -95,33 +77,33 @@
     "            \n",
     "            # if they are both vowels:\n",
     "            elif w1[i-1][0] in vowels and w2[j-1][0] in vowels:\n",
-    "                del_total = cost[i-1][j] + del_cost\n",
-    "                add_total = cost[i][j-1] + add_cost\n",
-    "                sub_total = cost[i-1][j-1] + sub_cost\n",
+    "                del_total = cost[i-1][j] + 1\n",
+    "                add_total = cost[i][j-1] + 1\n",
+    "                sub_total = cost[i-1][j-1] + 2\n",
     "                    \n",
     "            # if only one is a vowel:\n",
     "            elif w1[i-1][0] in vowels or w2[j-1][0] in vowels:\n",
-    "                del_total = cost[i-1][j] + del_cost + 1\n",
-    "                add_total = cost[i][j-1] + add_cost + 1\n",
-    "                sub_total = cost[i-1][j-1] + sub_cost + 1\n",
+    "                del_total = cost[i-1][j] + 2\n",
+    "                add_total = cost[i][j-1] + 2\n",
+    "                sub_total = cost[i-1][j-1] + 3\n",
     "                    \n",
     "            # if both are voiced consonants:\n",
     "            elif w1[i-1][0] in voiced and w2[j-1][0] in voiced:\n",
-    "                del_total = cost[i-1][j] + del_cost\n",
-    "                add_total = cost[i][j-1] + add_cost\n",
+    "                del_total = cost[i-1][j] + 1\n",
+    "                add_total = cost[i][j-1] + 1\n",
     "                sub_total = cost[i-1][j-1] + 1\n",
     "            \n",
     "            # if both are unvoiced consonants:\n",
     "            elif w1[i-1][0] in voiced and w2[j-1][0] in unvoiced:\n",
-    "                del_total = cost[i-1][j] + del_cost\n",
-    "                add_total = cost[i][j-1] + add_cost\n",
+    "                del_total = cost[i-1][j] + 1\n",
+    "                add_total = cost[i][j-1] + 1\n",
     "                sub_total = cost[i-1][j-1] + 1\n",
     "            \n",
     "            # if one is voiced and the other is unvoiced:\n",
     "            else:\n",
-    "                del_total = cost[i-1][j] + del_cost\n",
-    "                add_total = cost[i][j-1] + add_cost\n",
-    "                sub_total = cost[i-1][j-1] + sub_cost\n",
+    "                del_total = cost[i-1][j] + 1\n",
+    "                add_total = cost[i][j-1] + 1\n",
+    "                sub_total = cost[i-1][j-1] + 1\n",
     "                    \n",
     "            options = [del_total, add_total, sub_total]\n",
     "            options.sort()\n",
@@ -132,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -145,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -153,10 +135,10 @@
     {
      "data": {
       "text/plain": [
-       "4"
+       "3"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,43 +149,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['T', 'EH1', 'S', 'T']]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(cmudict.dict()[w])"
+    "real_list = []\n",
+    "real_dict = []\n",
+    "with open('real_words_lower.csv', 'r') as csvfile:\n",
+    "    reader = csv.reader(csvfile)\n",
+    "    for row in reader:\n",
+    "        real_list.append((row[0], eval(row[1])))\n",
+    "        real_dict.append(row[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "w = 'states'\n",
-    "word1 = cmudict.dict()[w][0]\n",
-    "options = []\n",
-    "for entry in cmudict.entries():\n",
-    "    price = MED(word1, entry[1])\n",
-    "    if price < 3 and w not in entry[0]:\n",
-    "        options.append(entry[0])"
+    "real_dict = set(real_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "w = 'find'\n",
+    "word1 = cmudict.dict()[w][0]\n",
+    "options = []\n",
+    "for entry in real_list:\n",
+    "    price = MED(word1, entry[1])\n",
+    "    if price < 3 and w not in entry[0]:\n",
+    "        options.append(entry)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -211,10 +202,10 @@
     {
      "data": {
       "text/plain": [
-       "47"
+       "70"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -233,25 +224,104 @@
     {
      "data": {
       "text/plain": [
-       "['ates',\n",
-       " 'aytes',\n",
-       " \"eight's\",\n",
-       " 'eights',\n",
-       " 'est',\n",
-       " 'estate',\n",
-       " \"estate's\",\n",
-       " 'sate',\n",
-       " 'sates',\n",
-       " 'scates']"
+       "[('fire', ['F', 'AY1', 'R']),\n",
+       " ('five', ['F', 'AY1', 'V']),\n",
+       " ('fives', ['F', 'AY1', 'V', 'Z']),\n",
+       " ('found', ['F', 'AW1', 'N', 'D']),\n",
+       " ('fund', ['F', 'AH1', 'N', 'D']),\n",
+       " ('fyke', ['F', 'AY1', 'K']),\n",
+       " ('grind', ['G', 'R', 'AY1', 'N', 'D']),\n",
+       " ('gyn', ['G', 'AY1', 'N']),\n",
+       " ('hein', ['HH', 'AY1', 'N']),\n",
+       " ('heinz', ['HH', 'AY1', 'N', 'Z']),\n",
+       " ('hind', ['HH', 'AY1', 'N', 'D']),\n",
+       " ('jain', ['JH', 'AY1', 'N']),\n",
+       " ('kind', ['K', 'AY1', 'N', 'D']),\n",
+       " ('line', ['L', 'AY1', 'N']),\n",
+       " ('lined', ['L', 'AY1', 'N', 'D']),\n",
+       " ('lived', ['L', 'AY1', 'V', 'D']),\n",
+       " ('mild', ['M', 'AY1', 'L', 'D']),\n",
+       " ('mind', ['M', 'AY1', 'N', 'D']),\n",
+       " ('mine', ['M', 'AY1', 'N']),\n",
+       " ('mines', ['M', 'AY1', 'N', 'Z'])]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "options[:10]"
+    "options[20:40]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    phrase = input('Enter a phrase: ').lower()\n",
+    "    word_list = phrase.split()\n",
+    "    \n",
+    "    choice_list = []\n",
+    "    for word in word_list:\n",
+    "        if word in stopwords.words('english'):\n",
+    "            choice_list.append([])\n",
+    "        elif word in real_dict:\n",
+    "            choices = []\n",
+    "            pos1 = pos_tag([word])[0][1]\n",
+    "            w1 = cmudict.dict()[word][0]\n",
+    "            for entry in real_list:\n",
+    "                pos2 = pos_tag([entry[0]])[0][1]\n",
+    "                if pos1 == pos2:\n",
+    "                    price = MED(w1, entry[1])\n",
+    "                    if price < 3 and word not in entry[0]:\n",
+    "                        choices.append(entry[0])\n",
+    "            choice_list.append(choices)\n",
+    "        else:\n",
+    "            choice_list.append([])\n",
+    "    \n",
+    "    # check to see if any subs were found:\n",
+    "    existing_choice = False\n",
+    "    for i in choice_list:\n",
+    "        if i:\n",
+    "            existing_choice = True\n",
+    "            break\n",
+    "    \n",
+    "    if existing_choice:\n",
+    "        position_choice = random.randrange(len(choice_list))\n",
+    "        while not choice_list[position_choice]:\n",
+    "            position_choice = random.randrange(len(choice_list))\n",
+    "        sub_choice = random.randrange(len(choice_list[position_choice]))\n",
+    "        sub = choice_list[position_choice][sub_choice]\n",
+    "        word_list[position_choice] = sub\n",
+    "        print(word_list)\n",
+    "    else:\n",
+    "        print('No suitable substitution found')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a phrase: code edits are required\n",
+      "['gnome', 'edits', 'are', 'required']\n"
+     ]
+    }
+   ],
+   "source": [
+    "main()"
    ]
   },
   {
