--- a/MED_Pronounce.ipynb
+++ b/MED_Pronounce.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 137,
    "metadata": {
     "collapsed": false
    },
@@ -66,68 +66,59 @@
     "    for j in range(len(w2)+1):\n",
     "        cost[0][j] = j\n",
     "        \n",
+    "    # baseline costs\n",
+    "    del_cost = 1\n",
+    "    add_cost = 1\n",
+    "    sub_cost = 1\n",
+    "        \n",
     "    for i in range(1, len(w1)+1):\n",
     "        for j in range(1, len(w2)+1):\n",
-    "            \n",
-    "            # if they are the same:\n",
+    "            # delete cost for vowels should be high\n",
+    "            if w1[i-1][0] in vowels:\n",
+    "                del_cost = 2\n",
+    "                sub_cost = 4\n",
+    "            # add cost for vowels should be high\n",
+    "            if w2[j-1][0] in vowels:\n",
+    "                add_cost = 2\n",
+    "                sub_cost = 4\n",
+    "            # if they are both vowels, sub should be lower than add + del, but still high\n",
+    "            if w1[i-1][0] in vowels and w2[j-1][0] in vowels:\n",
+    "                sub_cost = 2\n",
+    "            # if they are the same sound, the sub cost should be 0\n",
     "            if w1[i-1] == w2[j-1]:\n",
-    "                del_total = cost[i-1][j] + 10\n",
-    "                add_total = cost[i][j-1] + 10\n",
-    "                sub_total = cost[i-1][j-1]\n",
-    "            \n",
-    "            # if they are both vowels:\n",
-    "            elif w1[i-1][0] in vowels and w2[j-1][0] in vowels:\n",
-    "                del_total = cost[i-1][j] + 1\n",
-    "                add_total = cost[i][j-1] + 1\n",
-    "                sub_total = cost[i-1][j-1] + 2\n",
-    "                    \n",
-    "            # if only one is a vowel:\n",
-    "            elif w1[i-1][0] in vowels or w2[j-1][0] in vowels:\n",
-    "                del_total = cost[i-1][j] + 2\n",
-    "                add_total = cost[i][j-1] + 2\n",
-    "                sub_total = cost[i-1][j-1] + 3\n",
-    "                    \n",
-    "            # if both are voiced consonants:\n",
-    "            elif w1[i-1][0] in voiced and w2[j-1][0] in voiced:\n",
-    "                del_total = cost[i-1][j] + 1\n",
-    "                add_total = cost[i][j-1] + 1\n",
-    "                sub_total = cost[i-1][j-1] + 1\n",
-    "            \n",
-    "            # if both are unvoiced consonants:\n",
-    "            elif w1[i-1][0] in voiced and w2[j-1][0] in unvoiced:\n",
-    "                del_total = cost[i-1][j] + 1\n",
-    "                add_total = cost[i][j-1] + 1\n",
-    "                sub_total = cost[i-1][j-1] + 1\n",
-    "            \n",
-    "            # if one is voiced and the other is unvoiced:\n",
-    "            else:\n",
-    "                del_total = cost[i-1][j] + 1\n",
-    "                add_total = cost[i][j-1] + 1\n",
-    "                sub_total = cost[i-1][j-1] + 1\n",
-    "                    \n",
+    "                sub_cost = 0\n",
+    "            # get the totals\n",
+    "            del_total = cost[i-1][j] + del_cost\n",
+    "            add_total = cost[i][j-1] + add_cost\n",
+    "            sub_total = cost[i-1][j-1] + sub_cost\n",
+    "            # choose the lowest cost from the options\n",
     "            options = [del_total, add_total, sub_total]\n",
     "            options.sort()\n",
     "            cost[i][j] = options[0]\n",
     "           \n",
+    "#     print(w1)\n",
+    "#     print(w2)\n",
+    "#     for row in cost:\n",
+    "#         print(row)\n",
     "    return cost[-1][-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 168,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "w = 'test'\n",
-    "w2 = 'beast'\n",
+    "w = 'banana'\n",
+    "w2 = 'santa'\n",
     "res = MED(cmudict.dict()[w][0], cmudict.dict()[w2][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 169,
    "metadata": {
     "collapsed": false
    },
@@ -135,10 +126,10 @@
     {
      "data": {
       "text/plain": [
-       "3"
+       "4"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 140,
    "metadata": {
     "collapsed": true
    },
@@ -166,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 141,
    "metadata": {
     "collapsed": false
    },
@@ -177,13 +168,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 142,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "w = 'find'\n",
+    "w = 'like'\n",
     "word1 = cmudict.dict()[w][0]\n",
     "options = []\n",
     "for entry in real_list:\n",
@@ -194,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 143,
    "metadata": {
     "collapsed": false
    },
@@ -202,10 +193,10 @@
     {
      "data": {
       "text/plain": [
-       "70"
+       "36"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 147,
    "metadata": {
     "collapsed": false
    },
@@ -224,40 +215,30 @@
     {
      "data": {
       "text/plain": [
-       "[('fire', ['F', 'AY1', 'R']),\n",
-       " ('five', ['F', 'AY1', 'V']),\n",
-       " ('fives', ['F', 'AY1', 'V', 'Z']),\n",
-       " ('found', ['F', 'AW1', 'N', 'D']),\n",
-       " ('fund', ['F', 'AH1', 'N', 'D']),\n",
+       "[('bike', ['B', 'AY1', 'K']),\n",
+       " ('dike', ['D', 'AY1', 'K']),\n",
+       " ('dyke', ['D', 'AY1', 'K']),\n",
+       " ('fike', ['F', 'AY1', 'K']),\n",
        " ('fyke', ['F', 'AY1', 'K']),\n",
-       " ('grind', ['G', 'R', 'AY1', 'N', 'D']),\n",
-       " ('gyn', ['G', 'AY1', 'N']),\n",
-       " ('hein', ['HH', 'AY1', 'N']),\n",
-       " ('heinz', ['HH', 'AY1', 'N', 'Z']),\n",
-       " ('hind', ['HH', 'AY1', 'N', 'D']),\n",
-       " ('jain', ['JH', 'AY1', 'N']),\n",
-       " ('kind', ['K', 'AY1', 'N', 'D']),\n",
-       " ('line', ['L', 'AY1', 'N']),\n",
-       " ('lined', ['L', 'AY1', 'N', 'D']),\n",
-       " ('lived', ['L', 'AY1', 'V', 'D']),\n",
-       " ('mild', ['M', 'AY1', 'L', 'D']),\n",
-       " ('mind', ['M', 'AY1', 'N', 'D']),\n",
-       " ('mine', ['M', 'AY1', 'N']),\n",
-       " ('mines', ['M', 'AY1', 'N', 'Z'])]"
+       " ('hike', ['HH', 'AY1', 'K']),\n",
+       " ('ike', ['AY1', 'K']),\n",
+       " ('lac', ['L', 'AE1', 'K']),\n",
+       " ('lack', ['L', 'AE1', 'K']),\n",
+       " ('lai', ['L', 'AY1'])]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "options[20:40]"
+    "options[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 170,
    "metadata": {
     "collapsed": false
    },
@@ -279,34 +260,32 @@
     "                pos2 = pos_tag([entry[0]])[0][1]\n",
     "                if pos1 == pos2:\n",
     "                    price = MED(w1, entry[1])\n",
-    "                    if price < 3 and word not in entry[0]:\n",
+    "                    if price < 3 and word not in entry[0] and entry[0] not in word:\n",
     "                        choices.append(entry[0])\n",
     "            choice_list.append(choices)\n",
     "        else:\n",
     "            choice_list.append([])\n",
-    "    \n",
+    "                \n",
     "    # check to see if any subs were found:\n",
     "    existing_choice = False\n",
     "    for i in choice_list:\n",
     "        if i:\n",
     "            existing_choice = True\n",
     "            break\n",
-    "    \n",
+    "    # if subs are available, sub each possible word\n",
     "    if existing_choice:\n",
-    "        position_choice = random.randrange(len(choice_list))\n",
-    "        while not choice_list[position_choice]:\n",
-    "            position_choice = random.randrange(len(choice_list))\n",
-    "        sub_choice = random.randrange(len(choice_list[position_choice]))\n",
-    "        sub = choice_list[position_choice][sub_choice]\n",
-    "        word_list[position_choice] = sub\n",
-    "        print(word_list)\n",
+    "        for j in range(len(word_list)):\n",
+    "            if choice_list[j]:\n",
+    "                new_word = random.choice(choice_list[j])\n",
+    "                word_list[j] = new_word\n",
+    "        print(' '.join(word_list))\n",
     "    else:\n",
     "        print('No suitable substitution found')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 173,
    "metadata": {
     "collapsed": false
    },
@@ -315,8 +294,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a phrase: code edits are required\n",
-      "['gnome', 'edits', 'are', 'required']\n"
+      "Enter a phrase: i wonder if the train i need is running\n",
+      "i blunder if the dane i brede is gunning\n"
      ]
     }
    ],
