Core code no longer requires NLTK.

--- a/MED_Pronounce.ipynb
+++ b/MED_Pronounce.ipynb
@@ -8,8 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "from nltk.corpus import cmudict, stopwords, words\n",
-    "from nltk import pos_tag\n",
+    "from nltk.corpus import cmudict\n",
     "import random\n",
     "import csv"
    ]
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -105,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -118,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -129,7 +128,7 @@
        "4"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,41 +139,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "real_list = []\n",
-    "real_dict = []\n",
-    "with open('real_words_lower.csv', 'r') as csvfile:\n",
+    "real_words = []\n",
+    "with open('all_words.csv', 'r') as csvfile:\n",
     "    reader = csv.reader(csvfile)\n",
     "    for row in reader:\n",
-    "        real_list.append((row[0], eval(row[1])))\n",
-    "        real_dict.append(row[0])"
+    "        real_list.append((row[0], eval(row[1]), row[2]))\n",
+    "        real_words.append(row[0])\n",
+    "real_dict = {w[0]:{'pron':w[1], 'pos':w[2]} for w in real_list}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "real_dict = set(real_dict)"
+    "real_words = set(real_words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "w = 'like'\n",
+    "w = 'brown'\n",
     "word1 = cmudict.dict()[w][0]\n",
     "options = []\n",
     "for entry in real_list:\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -193,10 +193,10 @@
     {
      "data": {
       "text/plain": [
-       "36"
+       "15"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -215,19 +215,19 @@
     {
      "data": {
       "text/plain": [
-       "[('bike', ['B', 'AY1', 'K']),\n",
-       " ('dike', ['D', 'AY1', 'K']),\n",
-       " ('dyke', ['D', 'AY1', 'K']),\n",
-       " ('fike', ['F', 'AY1', 'K']),\n",
-       " ('fyke', ['F', 'AY1', 'K']),\n",
-       " ('hike', ['HH', 'AY1', 'K']),\n",
-       " ('ike', ['AY1', 'K']),\n",
-       " ('lac', ['L', 'AE1', 'K']),\n",
-       " ('lack', ['L', 'AE1', 'K']),\n",
-       " ('lai', ['L', 'AY1'])]"
+       "[('brain', ['B', 'R', 'EY1', 'N'], 'NN'),\n",
+       " ('bran', ['B', 'R', 'AE1', 'N'], 'NN'),\n",
+       " ('brawn', ['B', 'R', 'AO1', 'N'], 'NN'),\n",
+       " ('brin', ['B', 'R', 'IH1', 'N'], 'NN'),\n",
+       " ('brine', ['B', 'R', 'AY1', 'N'], 'NN'),\n",
+       " ('brough', ['B', 'R', 'AW1'], 'NN'),\n",
+       " ('brow', ['B', 'R', 'AW1'], 'NN'),\n",
+       " ('crown', ['K', 'R', 'AW1', 'N'], 'NN'),\n",
+       " ('down', ['D', 'AW1', 'N'], 'RP'),\n",
+       " ('drown', ['D', 'R', 'AW1', 'N'], 'VB')]"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,26 +238,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def main():\n",
+    "    \n",
+    "    # NLTK's list of stop words:\n",
+    "    stop_words = ['i', 'me', 'my', 'myself', 'we', 'our', 'ours',\n",
+    "                 'ourselves', 'you', 'your', 'yours', 'yourself',\n",
+    "                 'yourselves', 'he', 'him', 'his', 'himself', 'she',\n",
+    "                 'her', 'hers', 'herself', 'it', 'its', 'itself',\n",
+    "                 'they', 'them', 'their', 'theirs', 'themselves',\n",
+    "                 'what', 'which', 'who', 'whom', 'this', 'that',\n",
+    "                 'these', 'those', 'am', 'is', 'are', 'was', 'were',\n",
+    "                 'be', 'been', 'being', 'have', 'has', 'had', 'having',\n",
+    "                 'do', 'does', 'did', 'doing', 'a', 'an', 'the', 'and',\n",
+    "                 'but', 'if', 'or', 'because', 'as', 'until', 'while',\n",
+    "                 'of', 'at', 'by', 'for', 'with', 'about', 'against',\n",
+    "                 'between', 'into', 'through', 'during', 'before',\n",
+    "                 'after', 'above', 'below', 'to', 'from', 'up', 'down',\n",
+    "                 'in', 'out', 'on', 'off', 'over', 'under', 'again',\n",
+    "                 'further', 'then', 'once', 'here', 'there', 'when',\n",
+    "                 'where', 'why', 'how', 'all', 'any', 'both', 'each',\n",
+    "                 'few', 'more', 'most', 'other', 'some', 'such', 'no',\n",
+    "                 'nor', 'not', 'only', 'own', 'same', 'so', 'than', \n",
+    "                 'too', 'very', 's', 't', 'can', 'will', 'just', 'don',\n",
+    "                 'should', 'now']\n",
+    "    \n",
     "    phrase = input('Enter a phrase: ').lower()\n",
     "    word_list = phrase.split()\n",
     "    \n",
     "    choice_list = []\n",
     "    for word in word_list:\n",
-    "        if word in stopwords.words('english'):\n",
+    "        if word in stop_words:\n",
     "            choice_list.append([])\n",
-    "        elif word in real_dict:\n",
+    "        elif word in real_words:\n",
     "            choices = []\n",
-    "            pos1 = pos_tag([word])[0][1]\n",
-    "            w1 = cmudict.dict()[word][0]\n",
+    "            pos1 = real_dict[word]['pos']\n",
+    "            w1 = real_dict[word]['pron']\n",
     "            for entry in real_list:\n",
-    "                pos2 = pos_tag([entry[0]])[0][1]\n",
+    "                pos2 = real_dict[entry[0]]['pos']\n",
     "                if pos1 == pos2:\n",
     "                    price = MED(w1, entry[1])\n",
     "                    if price < 3 and word not in entry[0] and entry[0] not in word:\n",
@@ -285,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -294,8 +317,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a phrase: i wonder if the train i need is running\n",
-      "i blunder if the dane i brede is gunning\n"
+      "Enter a phrase: the first season of a new show\n",
+      "the first reason of a due owe\n"
      ]
     }
    ],
