--- a/MED.ipynb
+++ b/MED.ipynb
@@ -9,8 +9,8 @@
    "outputs": [],
    "source": [
     "cost = []\n",
-    "word1 = 'cat'\n",
-    "word2 = 'cart'"
+    "word1 = 'abroad'\n",
+    "word2 = 'bread'"
    ]
   },
   {
@@ -39,10 +39,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0]\n"
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0]\n"
      ]
     }
    ],
@@ -76,10 +79,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3, 4]\n",
-      "[1, 0, 0, 0, 0]\n",
-      "[2, 0, 0, 0, 0]\n",
-      "[3, 0, 0, 0, 0]\n"
+      "[0, 1, 2, 3, 4, 5]\n",
+      "[1, 0, 0, 0, 0, 0]\n",
+      "[2, 0, 0, 0, 0, 0]\n",
+      "[3, 0, 0, 0, 0, 0]\n",
+      "[4, 0, 0, 0, 0, 0]\n",
+      "[5, 0, 0, 0, 0, 0]\n",
+      "[6, 0, 0, 0, 0, 0]\n"
      ]
     }
    ],
@@ -90,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -103,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -124,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -133,10 +139,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3, 4]\n",
-      "[1, 0, 1, 2, 3]\n",
-      "[2, 1, 0, 1, 2]\n",
-      "[3, 2, 1, 2, 1]\n"
+      "[0, 1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 3, 4]\n",
+      "[2, 1, 2, 3, 4, 5]\n",
+      "[3, 2, 1, 2, 3, 4]\n",
+      "[4, 3, 2, 3, 4, 5]\n",
+      "[5, 4, 3, 4, 3, 4]\n",
+      "[6, 5, 4, 5, 4, 3]\n"
      ]
     }
    ],
@@ -147,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -156,7 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "3\n"
      ]
     }
    ],
