Core code no longer requires NLTK

--- a/MED_Pronounce.ipynb
+++ b/MED_Pronounce.ipynb
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -317,8 +317,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a phrase: the first season of a new show\n",
-      "the first reason of a due owe\n"
+      "Enter a phrase: This is a test phrase\n",
+      "this is a zest pais\n"
      ]
     }
    ],
