--- a/PUNchline.ipynb
+++ b/PUNchline.ipynb
@@ -2,51 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "from nltk.corpus import cmudict\n",
     "import random\n",
     "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['HH', 'AH0', 'L', 'OW1'], ['HH', 'EH0', 'L', 'OW1']]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cmudict.dict()['hello']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "def MED(w1, w2):\n",
+    "# The edit distance function\n",
+    "def edit_distance(w1, w2):\n",
     "    \n",
     "    cost = []\n",
-    "#     del_cost = 1\n",
-    "#     add_cost = 1\n",
-    "#     sub_cost = 2\n",
     "    \n",
     "    vowels = ['A', 'E', 'I', 'O', 'U']\n",
-    "    voiced = ['B', 'D', 'G', 'J', 'L', 'M', 'N', 'R', 'V', 'W', 'Y', 'Z']\n",
-    "    unvoiced = ['C', 'F', 'H', 'K', 'P', 'S', 'T']\n",
+    "    # These may be useful for later work:\n",
+    "    #voiced = ['B', 'D', 'G', 'J', 'L', 'M', 'N', 'R', 'V', 'W', 'Y', 'Z']\n",
+    "    #unvoiced = ['C', 'F', 'H', 'K', 'P', 'S', 'T']\n",
     "    \n",
     "    for i in range(len(w1)+1):\n",
     "        x = []\n",
@@ -62,7 +44,7 @@
     "    # baseline costs\n",
     "    del_cost = 1\n",
     "    add_cost = 1\n",
-    "    sub_cost = 1\n",
+    "    sub_cost = 2\n",
     "        \n",
     "    for i in range(1, len(w1)+1):\n",
     "        for j in range(1, len(w2)+1):\n",
@@ -98,41 +80,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "w = 'banana'\n",
-    "w2 = 'santa'\n",
-    "res = MED(cmudict.dict()[w][0], cmudict.dict()[w2][0])"
+    "# Make sure it works\n",
+    "edit_distance('cat', 'scant')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "# Get our list of words, pronunciations, and POSs from CSV\n",
     "real_list = []\n",
     "real_words = []\n",
     "with open('all_words.csv', 'r') as csvfile:\n",
@@ -145,81 +109,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "# We only need unique words\n",
+    "# whether or not there are multiple entries\n",
     "real_words = set(real_words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "w = 'brown'\n",
-    "word1 = cmudict.dict()[w][0]\n",
+    "# Get all the possible substitutions for a word\n",
+    "w = 'cat'\n",
+    "word1 = real_dict[w]['pron']\n",
     "options = []\n",
     "for entry in real_list:\n",
-    "    price = MED(word1, entry[1])\n",
+    "    price = edit_distance(word1, entry[1])\n",
     "    if price < 3 and w not in entry[0]:\n",
     "        options.append(entry)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# How many viable options are there?\n",
     "len(options)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('brain', ['B', 'R', 'EY1', 'N'], 'NN'),\n",
-       " ('bran', ['B', 'R', 'AE1', 'N'], 'NN'),\n",
-       " ('brawn', ['B', 'R', 'AO1', 'N'], 'NN'),\n",
-       " ('brin', ['B', 'R', 'IH1', 'N'], 'NN'),\n",
-       " ('brine', ['B', 'R', 'AY1', 'N'], 'NN'),\n",
-       " ('brough', ['B', 'R', 'AW1'], 'NN'),\n",
-       " ('brow', ['B', 'R', 'AW1'], 'NN'),\n",
-       " ('crown', ['K', 'R', 'AW1', 'N'], 'NN'),\n",
-       " ('down', ['D', 'AW1', 'N'], 'RP'),\n",
-       " ('drown', ['D', 'R', 'AW1', 'N'], 'VB')]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "options[:10]"
+    "# Choose one randomly\n",
+    "random.choice(options)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def main():\n",
@@ -246,13 +190,21 @@
     "                 'too', 'very', 's', 't', 'can', 'will', 'just', 'don',\n",
     "                 'should', 'now']\n",
     "    \n",
+    "    # Get phrase from user\n",
     "    phrase = input('Enter a phrase: ').lower()\n",
     "    word_list = phrase.split()\n",
     "    \n",
+    "    # Initialize empty choice list\n",
+    "    # This will be filled with 1 list for each word in input phrase\n",
     "    choice_list = []\n",
     "    for word in word_list:\n",
+    "        # If the word is a stop word\n",
+    "        # we don't want to replace it\n",
+    "        # Put an empty list so there are no possible replacements\n",
     "        if word in stop_words:\n",
     "            choice_list.append([])\n",
+    "        # If the word is a \"real\" word\n",
+    "        # find all possible subs\n",
     "        elif word in real_words:\n",
     "            choices = []\n",
     "            pos1 = real_dict[word]['pos']\n",
@@ -260,25 +212,27 @@
     "            for entry in real_list:\n",
     "                pos2 = real_dict[entry[0]]['pos']\n",
     "                if pos1 == pos2:\n",
-    "                    price = MED(w1, entry[1])\n",
+    "                    price = edit_distance(w1, entry[1])\n",
     "                    if price < 3 and word not in entry[0] and entry[0] not in word:\n",
     "                        choices.append(entry[0])\n",
     "            choice_list.append(choices)\n",
+    "        # If it is not a \"real\" word\n",
+    "        # put an empty list in its position in choice_list\n",
     "        else:\n",
     "            choice_list.append([])\n",
     "                \n",
     "    # check to see if any subs were found:\n",
     "    existing_choice = False\n",
-    "    for i in choice_list:\n",
-    "        if i:\n",
+    "    for c in choice_list:\n",
+    "        if c:\n",
     "            existing_choice = True\n",
     "            break\n",
     "    # if subs are available, sub each possible word\n",
     "    if existing_choice:\n",
-    "        for j in range(len(word_list)):\n",
-    "            if choice_list[j]:\n",
-    "                new_word = random.choice(choice_list[j])\n",
-    "                word_list[j] = new_word\n",
+    "        for i, _ in enumerate(word_list):\n",
+    "            if choice_list[i]:\n",
+    "                new_word = random.choice(choice_list[i])\n",
+    "                word_list[i] = new_word\n",
     "        print(' '.join(word_list))\n",
     "    else:\n",
     "        print('No suitable substitution found')"
@@ -286,18 +240,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter a phrase: This is a test phrase\n",
-      "this is a zest pais\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "main()"
    ]
