main function cleaned up in PUNchline notebook

--- a/PUNchline.ipynb
+++ b/PUNchline.ipynb
@@ -129,6 +129,7 @@
    "outputs": [],
    "source": [
     "# Get all the possible substitutions for a word\n",
+    "# regardless of POS\n",
     "w = 'cat'\n",
     "word1 = real_dict[w]['pron']\n",
     "options = []\n",
@@ -136,6 +137,37 @@
     "    price = edit_distance(word1, entry[1])\n",
     "    if price < 3 and w not in entry[0]:\n",
     "        options.append(entry)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Define a function to get all possible choices based on our criteria\n",
+    "def get_choices(word):\n",
+    "    \n",
+    "    # Set our threshold cost\n",
+    "    max_price = 3\n",
+    "    choices = []\n",
+    "    pos1 = real_dict[word]['pos']\n",
+    "    w1 = real_dict[word]['pron']\n",
+    "    for entry in real_list:\n",
+    "        pos2 = real_dict[entry[0]]['pos']\n",
+    "        # Only consider words that are the same POS\n",
+    "        if pos1 == pos2:\n",
+    "            price = edit_distance(w1, entry[1])\n",
+    "            # Criteria:\n",
+    "            # low enough cost\n",
+    "            # word1 is not a substring of word2 ('cat' and 'cats')\n",
+    "            # word2 is not a substring of word1 ('cats' and 'cat')\n",
+    "            if price < max_price and word not in entry[0] and entry[0] not in word:\n",
+    "                choices.append(entry[0])\n",
+    "    \n",
+    "    return choices"
    ]
   },
   {
@@ -206,15 +238,7 @@
     "        # If the word is a \"real\" word\n",
     "        # find all possible subs\n",
     "        elif word in real_words:\n",
-    "            choices = []\n",
-    "            pos1 = real_dict[word]['pos']\n",
-    "            w1 = real_dict[word]['pron']\n",
-    "            for entry in real_list:\n",
-    "                pos2 = real_dict[entry[0]]['pos']\n",
-    "                if pos1 == pos2:\n",
-    "                    price = edit_distance(w1, entry[1])\n",
-    "                    if price < 3 and word not in entry[0] and entry[0] not in word:\n",
-    "                        choices.append(entry[0])\n",
+    "            choices = get_choices(word)\n",
     "            choice_list.append(choices)\n",
     "        # If it is not a \"real\" word\n",
     "        # put an empty list in its position in choice_list\n",
