POS notebook added, additonal examples added to pronunciation notebook

--- a/Pronunciation.ipynb
+++ b/Pronunciation.ipynb
@@ -41,7 +41,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Some words have alternate pronunciations\n",
@@ -63,13 +65,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cmudict.dict()['cot']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "cmudict.dict()['vampire']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# word must be in the dictionary\n",
@@ -97,7 +112,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "doublemetaphone('hello')"
@@ -118,13 +135,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "doublemetaphone('cot')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "doublemetaphone('vampire')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# the algorithm doesn't care if the word is real\n",
