simplified PUNchline code for now

--- a/PUNchline.ipynb
+++ b/PUNchline.ipynb
@@ -25,8 +25,8 @@
     "    \n",
     "    cost = []\n",
     "    \n",
-    "    vowels = ['A', 'E', 'I', 'O', 'U']\n",
     "    # These may be useful for later work:\n",
+    "    #vowels = ['A', 'E', 'I', 'O', 'U']\n",
     "    #voiced = ['B', 'D', 'G', 'J', 'L', 'M', 'N', 'R', 'V', 'W', 'Y', 'Z']\n",
     "    #unvoiced = ['C', 'F', 'H', 'K', 'P', 'S', 'T']\n",
     "    \n",
@@ -45,23 +45,13 @@
     "    del_cost = 1\n",
     "    add_cost = 1\n",
     "    sub_cost = 2\n",
-    "        \n",
+    "    \n",
     "    for i in range(1, len(w1)+1):\n",
     "        for j in range(1, len(w2)+1):\n",
-    "            # delete cost for vowels should be high\n",
-    "            if w1[i-1][0] in vowels:\n",
-    "                del_cost = 2\n",
-    "                sub_cost = 4\n",
-    "            # add cost for vowels should be high\n",
-    "            if w2[j-1][0] in vowels:\n",
-    "                add_cost = 2\n",
-    "                sub_cost = 4\n",
-    "            # if they are both vowels, sub should be lower than add + del, but still high\n",
-    "            if w1[i-1][0] in vowels and w2[j-1][0] in vowels:\n",
-    "                sub_cost = 2\n",
-    "            # if they are the same sound, the sub cost should be 0\n",
     "            if w1[i-1] == w2[j-1]:\n",
     "                sub_cost = 0\n",
+    "            else:\n",
+    "                sub_cost = 2\n",
     "            # get the totals\n",
     "            del_total = cost[i-1][j] + del_cost\n",
     "            add_total = cost[i][j-1] + add_cost\n",
@@ -70,11 +60,7 @@
     "            options = [del_total, add_total, sub_total]\n",
     "            options.sort()\n",
     "            cost[i][j] = options[0]\n",
-    "           \n",
-    "#     print(w1)\n",
-    "#     print(w2)\n",
-    "#     for row in cost:\n",
-    "#         print(row)\n",
+    "\n",
     "    return cost[-1][-1]"
    ]
   },
@@ -123,51 +109,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Get all the possible substitutions for a word\n",
     "# regardless of POS\n",
-    "w = 'cat'\n",
+    "w = 'gotham'\n",
     "word1 = real_dict[w]['pron']\n",
     "options = []\n",
     "for entry in real_list:\n",
     "    price = edit_distance(word1, entry[1])\n",
     "    if price < 3 and w not in entry[0]:\n",
     "        options.append(entry)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Define a function to get all possible choices based on our criteria\n",
-    "def get_choices(word):\n",
-    "    \n",
-    "    # Set our threshold cost\n",
-    "    max_price = 3\n",
-    "    choices = []\n",
-    "    pos1 = real_dict[word]['pos']\n",
-    "    w1 = real_dict[word]['pron']\n",
-    "    for entry in real_list:\n",
-    "        pos2 = real_dict[entry[0]]['pos']\n",
-    "        # Only consider words that are the same POS\n",
-    "        if pos1 == pos2:\n",
-    "            price = edit_distance(w1, entry[1])\n",
-    "            # Criteria:\n",
-    "            # low enough cost\n",
-    "            # word1 is not a substring of word2 ('cat' and 'cats')\n",
-    "            # word2 is not a substring of word1 ('cats' and 'cat')\n",
-    "            if price < max_price and word not in entry[0] and entry[0] not in word:\n",
-    "                choices.append(entry[0])\n",
-    "    \n",
-    "    return choices"
    ]
   },
   {
@@ -186,8 +139,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Choose one randomly\n",
-    "random.choice(options)"
+    "options"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Define a function to get all possible choices based on our criteria\n",
+    "def get_choices(word):\n",
+    "    \n",
+    "    # Set our threshold cost\n",
+    "    max_price = 2\n",
+    "    choices = []\n",
+    "    pos1 = real_dict[word]['pos']\n",
+    "    w1 = real_dict[word]['pron']\n",
+    "    for entry in real_list:\n",
+    "        pos2 = real_dict[entry[0]]['pos']\n",
+    "        # Only consider words that are the same POS\n",
+    "        if pos1 == pos2:\n",
+    "            price = edit_distance(w1, entry[1])\n",
+    "            # Criteria:\n",
+    "            # low enough cost\n",
+    "            # word1 is not a substring of word2 ('cat' and 'cats')\n",
+    "            # word2 is not a substring of word1 ('cats' and 'cat')\n",
+    "            if price <= max_price and word not in entry[0] and entry[0] not in word:\n",
+    "                choices.append(entry[0])\n",
+    "    \n",
+    "    return choices"
    ]
   },
   {
